--- a/models/beyond_baseline.ipynb
+++ b/models/beyond_baseline.ipynb
@@ -9,6 +9,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.input').hide();\n",
+       " } else {\n",
+       " $('div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+       "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "The raw code for this IPython notebook is by default hidden for easier reading.\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -47,54 +97,6 @@
     "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
     "test = pd.read_csv('../data/cleaned/test_final.csv')\n",
     "wc_playoffs_train = pd.read_csv('../data/cleaned/wc_playoffs_final.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['game_date', 'home_team', 'away_team', 'home_score', 'away_score',\n",
-       "       'tournament', 'country', 'neutral', 'overall_diff',\n",
-       "       'attack_away_defence_home_diff', 'attack_diff',\n",
-       "       'attack_home_defence_away_diff', 'defence_diff', 'midfield_diff',\n",
-       "       'rank_diff', 'prestige_diff', 'growth_diff', 'full_age_diff',\n",
-       "       'start_age_diff', 'value_euros_millions_diff',\n",
-       "       'wage_euros_thousands_diff', 'goalkeeper_overall_diff',\n",
-       "       'bup_dribbling_diff', 'bup_passing_diff', 'bup_speed_diff',\n",
-       "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
-       "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
-       "       'x_rating', 'y_rating', 'gdp_diff', 'is_home', 'raw_gdp_diff',\n",
-       "       'wins_past_1_games_diff', 'win_momentum_past_1_games_diff',\n",
-       "       'lose_momentum_past_2_games_diff', 'lose_momentum_past_4_games_diff',\n",
-       "       'wins_home_against_away_5_games', 'wins_past_5_games_diff',\n",
-       "       'wins_past_3_games_diff', 'wins_home_against_away_4_games',\n",
-       "       'lose_momentum_past_3_games_diff', 'lose_momentum_past_1_games_diff',\n",
-       "       'win_momentum_past_3_games_diff', 'wins_home_against_away_3_games',\n",
-       "       'wins_past_2_games_diff', 'win_momentum_past_2_games_diff',\n",
-       "       'wins_past_4_games_diff', 'wins_home_against_away_2_games',\n",
-       "       'wins_home_against_away_1_games', 'lose_momentum_past_5_games_diff',\n",
-       "       'win_momentum_past_5_games_diff', 'win_momentum_past_4_games_diff'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To begin, let's just naively use all the features we have feature engineered."
    ]
   },
   {
@@ -156,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to before, we will fit different classification models on our data and select the one with the best validation accuracy. "
+    "To begin, let's just naively use all the features we have feature engineered. Similar to before, we will fit different classification models on our data and select the one with the best validation accuracy. "
    ]
   },
   {
@@ -1747,7 +1749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
