Final submission notebook

--- a/doc/final_submission.ipynb
+++ b/doc/final_submission.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Predicting the 2018 World Cup\n",
+    "## Brian Lin, Shane Ong, Pat Sukhum, Matteo Zhang"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Overview and Motivation\n",
     "\n",
     "While soccer is one of the most popular sports in the world, its analytics is lackluster in comparison to other popular sports such as baseball, American football, hockey, and basketball. This is particularly evident for the FIFA World Cup. The amount of analytics done on the FIFA World Cup is just miniscule in comparison to its scale, given that it is one of the most popular and highly televised sporting events in the world! This can be attributed to the general resistance of the sport (or FIFA) towards technology. Even though numerous other sports already use video technology to review plays while on the pitch, FIFA World Cup 2018 was the first time Video Assistant Referee (VAR) was used in a major soccer tournament. \n",
@@ -51,13 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Exploratory Data Analysis\n",
+    "\n",
     "## European Matches\n",
     "For each match, we compute the average statistics for the different ratings for each team and difference them. Just getting the total value would not unfortunately work due to some rows potentially having uneven number of values missing. We then take the difference in the statistic for the home team and away team. For goal keeping ratings, we will only look at the max of each team since in theory the goal keepers in a match should have the best goal keeper statistics.\n",
     "\n",
@@ -193,36 +196,29 @@
    "source": [
     "# Beyond Baseline\n",
     "\n",
-    "## Modeling with Feature Engineered Features\n",
+    "### Modeling with Feature Engineered Features\n",
     "\n",
-    "### Fitting the Models\n",
+    "To begin, we naively used all the features we have feature engineered. Similar to before, we fitted different classification models on our data and select the one with the best validation accuracy.\n",
     "\n",
-    "To begin, let’s just naively use all the features we have feature engineered. Similar to before, we will fit different classification models on our data and select the one with the best validation accuracy.\n",
-    "\n",
-    "\n",
-    "Also, like before, we first check whether the variances across the three outcomes are equal, and they do seem quite equal.\n",
-    "\n",
-    "![Variances](img/variances.png)\n",
     "\n",
     "We ran Logistic Regression, LDA, QDA, Random Forest, and XGBoost and got the following results: \n",
     "![Model scores](img/model_scores.png)\n",
     "\n",
-    "We choose the final model to be the one with the highest validation score, which is LDA in this case\n",
+    "We choose the final model to be the one with the highest validation score, which is LDA in this case.\n",
     "\n",
-    "Now to predict the test set. Similar to before, we will use three different approaches. For the WC Playoff Model approach, we will still use logistic regression for now.\n",
+    "Similar to before, we used three different approaches to predict the test set. For the WC Playoff Model approach, we continue to use logistic regression. \n",
     "\n",
     "![LDA scores](img/lda_scores.png)\n",
     "\n",
-    "Wow! It seems that our model with all the features is a decent improvement to the baseline model for the test set in all three approaches. However, the lower train and validation scores in general is a bit concerning.\n",
-    "\n",
-    "Like before, random forest seems to perform similarly to the best model, so we will utilize its feature importance again.\n",
+    "It seems that our model with all the features is a decent improvement to the baseline model for the test set in all three approaches. However, the lower train and validation scores in general is a bit concerning. Like before, random forest seems to perform similarly to the best model, so we will utilize its feature importance again.\n",
     "\n",
     "![Random Forest features](img/RF_features.png)\n",
     "\n",
     "\n",
-    "Like before, the ratings of the team are pretty important features. Many of the features we have engineered seem to be decent features as well, which should not be surprising from the EDA. Besides 3 of them, many of the momentum features are near the bottom, and this might be due to the fact that these momentum features are obviously highly correlated with each other, and this may be causing the lower train and validation scores. Many of the features in our feature are highly correlated; we would want to deal with this multicollinearity somehow to see if we can achieve better results.\n",
+    "The ratings of the team are still pretty important features. Many of the features we have engineered seem to be decent features as well, which should not be surprising from the EDA. Besides 3 of them, many of the momentum features are near the bottom, and this might be due to the fact that these momentum features are obviously highly correlated with each other, and this may be causing the lower train and validation scores. Many of the features in our feature are highly correlated; we would want to deal with this multicollinearity somehow to see if we can achieve better results.\n",
     "\n",
     "### Stacking\n",
+    "\n",
     "We saw that our models in general performed similarly in terms of train/validation. Why not try stacking the models together? We will stack the logistic regression, LDA, QDA, Random Forest, and XGBoost models.\n",
     "\n",
     "We got the following results: <br>\n",
@@ -232,7 +228,7 @@
     "Stacking Model Test Score at end (Softmax): 0.625 <br>\n",
     "Stacking Model Test Score at end (WC Playoff Model): 0.640625\n",
     "\n",
-    "It seems that stacking in this case did not really help that much. The test accuarcies are quite low, although still higher than those of the baseline model.\n",
+    "It seems that stacking in this case did not really help that much. The test accuarcies are still decent though, higher than those of the baseline model.\n",
     "\n",
     "As mentioned before, we are a bit concerned about the fact that our features are highly correlated, which potentially affects our predictions.\n",
     "\n",
@@ -240,7 +236,9 @@
     "\n",
     "Principal Component Analysis (PCA) is a way to reduce the dimensionality of dataset by summarizing the variation in our data into a set of new predictors called principal components. These principal components are linear combinations of our original predictors. By selecting the top few principal components, we are projecting our dataset into the space defined by these components. This means that we are projecting our dataset onto a space of smaller dimensionality. Importantly, this will help us reduce the multicollinearity that might be affecting our predictions. Each principal component is constructed such that they are orthogonal with each other. Nonetheless, we understand that this will limit the interpretability of our coefficients.\n",
     "\n",
-    "Principal Component Regression (PCR) is basically using the new predictors of reduced dimensionality in a regression problem. In this problem, we inputed the new principal components into our standard logistic regression. In order to decide the number of principal components to keep, we cross-validated the number of principal components that gives us the best validation accuracy.\n",
+    "Principal Component Regression (PCR) is basically using the new predictors of reduced dimensionality in a regression problem. In this problem, we inputed the new principal components into our standard logistic regression. In order to decide the number of principal components to keep, we cross-validated the number of principal components that gives us the best validation accuracy. For the WC Playoffs Model, we will also use PCA to find the number of components that maximizes the train accuracy and fit a PCR model to the World Cup playoffs data. \n",
+    "\n",
+    "![PCR Plot](img/pcr_plot.png)\n",
     "\n",
     "\n",
     "We got the following results: <br>\n",
@@ -250,8 +248,6 @@
     "PCR (Best) Test Score at 90 mins: 0.5625 <br>\n",
     "PCR (Best) Test Score at end (Softmax): 0.578125 <br>\n",
     "PCR (Best) Test Score at end (WC Playoffs Model): 0.609375\n",
-    "\n",
-    "![PCR Plot](img/pcr_plot.png)\n",
     "\n",
     "In this case, PCR was not a good option. The test accuracy decreased quite significantly. We may need to take into the account the outcome as well when we reduce the dimension of our feature set.\n",
     "\n",
@@ -281,7 +277,7 @@
     "\n",
     "end for\n",
     "\n",
-    "The PLS2 algorithm is just an extension for a multi-dimensional response variable.\n",
+    "The PLS2 algorithm is just an extension for a response variable with more than two outcomes.\n",
     "\n",
     "Importantly, PLS selects components which gives us the greatest reduction in the covariance of our predictors and response. If we represent our components as $\\mathbf{z}$, and the response as $\\mathbf{y}$, it can be shown that PLSR optimizes with respect to the weights $\\mathbf{w}$\n",
     "\n",
@@ -306,7 +302,9 @@
     "PLS2-DA (Best) Validation Score: 0.5526315789473685 <br>\n",
     "\n",
     "![PLS 1](img/pls-da2.png)\n",
-    "In the case of binary labels, PLS1-DA and PLS2-DA are the same, so we will look at the third approach in PLS2-DA.\n",
+    "\n",
+    "For the WC Playoffs Model, we will also fit the PLS model with number of components that maximizes the train accuracy. In the case of binary labels, PLS1-DA and PLS2-DA are the same, so we only have one result for the WC Playoffs Model.\n",
+    "\n",
     "\n",
     "PLS1-DA (Best) Test Score at 90 mins: 0.640625 <br>\n",
     "PLS1-DA (Best) Test Score at end (Softmax): 0.6875 <br>\n",
@@ -332,11 +330,6 @@
     "\n",
     "The Softmax approach had higher home loss and home win accuracies than the WC Playoff Model approach; this might be due to the small training set for the playoff matches, so we could just be overfitting to the traing set. As mentioned in the baseline model, we cannot really compare the confusion matrices of the three approaches to the test set, as the true labels between the 90 minutes approach are different from those than the true labels in the other two approaches."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -385,13 +378,6 @@
     "\n",
     "This project proves that there is a lot of potential for the field to expand. There is no doubt in the future we will see teams rely heavily on analytics to make decision, just like how baseball, basketball and American football do in the current era. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -410,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
