--- a/doc/final_submission.ipynb
+++ b/doc/final_submission.ipynb
@@ -366,7 +366,7 @@
     "![Neural Net Results](img/neural_net_results.png)\n",
     "\n",
     "\n",
-    "Surprisngly, the neural network actually did better than we thought it would. This most likely stems from the regularization we added as well as the dropout layers. However, the neural network stilldid not perform as well as our best model.\n",
+    "Surprisingly, the neural network actually did better than we thought it would. This most likely stems from the regularization we added as well as the dropout layers. However, the neural network stilldid not perform as well as our best model.\n",
     "\n",
     "We have thus shown that neural networks do not really help improve accuracy in this small dataset; it shows that we do not really need that complex of a model in this problem.\n",
     "\n",
