--- a/doc/final_submission.ipynb
+++ b/doc/final_submission.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "This time it is a bit more obvious that home team winning tends to have higher values. It seems like we can probably calculate some kind of momentum and utilize it as a predictor. We will explore more of this concept later on when we make our advanced model.\n",
     "\n",
-    "## Conclusion From Europen Dataset\n",
+    "## Conclusion From European Dataset\n",
     "\n",
     "\n",
     "From exploration of the European dataset, we saw that aggregating individual player ratings does not seem to help that much while previous matches seem to help. Thus, we decided to only keep the summary statistics of the team rather than players' individual statistics. We will keep these discoveries in mind as we move on to the SOFIFA datasets.\n",
@@ -127,16 +127,26 @@
     "\n",
     "## Interpreting PCA\n",
     "\n",
-    "![Correlation Circle](img/corr_circle.png)\n",
+    "![Correlation Circle 1](img/corr_circle1.png)\n",
     "\n",
     "We only highlighted the top 20 predictors with largest correlation magnitude as these are likely to be the more important predictors. \n",
     "\n",
-    "`start_age_diff` and `full_age_diff` are naturally correlated, and seem to explain a substantial amount of variation in the data. `growth_diff`, which is on the other side of the correlation circle, seems to explain variation that is almost the opposite of `start_age_diff` and `full_age_diff`. This makes intuitive sense as we would expect younger players to have more room for growth.\n",
+    "If we look at the first two PCs, we note that the predictors are generally pointing in 3 different directions. `attack_away_defence_home_diff`is pointing at approximately the 7 o'clock direction, and is right across `overall_diff`, `value_euros_millions_diff`, etc. This suggests that they are negatively correlated, which makes intuitive sense as we would expect that a great difference in overall ratings of a team would be negatively correlated with a great difference in the strength of the away team's offence with respect to the home team's defense. \n",
     "\n",
-    "`attack_away_defence_home_diff` and `rank_diff` also seem to be explain similar variation in the data. The rest of the predictors are all clustered at the 3 o'clock region of the circle, right across the predictors `attack_away_defence_home_diff` and `rank_diff`. This suggests that these predictors explain similar variation in the data and might be correlated.\n",
+    "Importantly, all the `momentum` related predictors are at right angles to the other 2 clusters of predictors. They are naturally correlated and seem to explain a substantial amount of variation in the data. As such, it seems that these predictors, which we had feature engineered, explain different variation in the data. This justifies our feature engineering procedure. \n",
+    "\n",
+    "![Correlation Circle 2](img/corr_circle2.png)\n",
+    "\n",
+    "Similarly, we can also look at the 3rd and 4th PC. In contrast to the 1st 2 PCs, it seems that the 3rd and 4th PCs capture the variation related to team strategies, i.e. `bup_passing_diff`, `cc_crossing_diff` (a team's passing build-up-play, and chance creation from crosses respectively) and to age i.e. `growth_diff`, `start_age_diff` (a measure of the youth potential of a team, and the average starting age of a team respectively). These 2 categories are similarly at right angle to each other, suggesting that they capture different variation. \n",
+    "\n",
+    "**We can also utilize PCA across observations, rather than across predictors. This will give us an insight into which teams are most similar. As such, we select the last ratings for the World-Cup teams from FIFA 2018.**\n",
+    "\n",
+    "We first just look at the spread of teams with two scatterplots. The first has the team overall ratings on the y-axis, and the average starting age on the x-axis. The second has team offense ratings on the y-axis, and the defense ratings on the x-axis.\n",
     "\n",
     "![Overall vs Start Age](img/overall_start_age.png)\n",
     "![Offense vs Defense](img/offense_defense.png)\n",
+    "\n",
+    "We then do a PCA across the observations.\n",
     "\n",
     "![PCA Plot](img/pca_plot.png)\n",
     "![PCA Table1](img/eda_table_1.png)\n",
@@ -415,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
